--- a/2-dars/index.html
+++ b/2-dars/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>
     <title>Document</title>
 </head>
+
 <body>
     <header class="bg-[#121214]">
         <div class="container p-10 flex items-center justify-between">
@@ -20,26 +22,34 @@
                 <a href="#" class="hover:text-white">Blog</a>
                 <a href="#" class="hover:text-white">Pricing</a>
             </nav>
-            <button class="bg-white border border-white rounded-[32px] w-[100px] p-3 active:bg-transparent active:text-white">Sign up</button>
+            <button
+                class="bg-white border border-white rounded-[32px] w-[100px] p-3 active:bg-transparent active:text-white">Sign
+                up</button>
         </div>
     </header>
     <main class="bg-[#121214]">
         <section class="bg-[url('images/backgroundimg.png')] bg-cover h-[744px] p-10 flex items-center">
             <div>
                 <h1 class="text-white text-7xl w-[500px]">Step into the producer's playground</h1>
-                <p class="text-white text-2xl py-10 w-[500px]">Explore the world's best sample library and an unmatched marketplace of plugins and DAWs.</p>
-                <button class="border border-[#0033FF] bg-[#0033FF] rounded w-[120px] text-white p-4 active:bg-transparent active:text-[#0033FF]">Try free</button>
+                <p class="text-white text-2xl py-10 w-[500px]">Explore the world's best sample library and an unmatched
+                    marketplace of plugins and DAWs.</p>
+                <button
+                    class="border border-[#0033FF] bg-[#0033FF] rounded w-[120px] text-white p-4 active:bg-transparent active:text-[#0033FF]">Try
+                    free</button>
             </div>
         </section>
-        <section class="h-[1100px] px-20 py-5">
+        <section class="h-[1700px] px-20 py-5">
             <div class="content">
                 <h3 class="text-center text-white text-2xl">About Catalog</h3>
             </div>
             <div class="series-1 pt-20 flex justify-between items-center">
                 <div class="pt-[100px]">
                     <h3 class="text-white text-3xl">A catalog so deep, it's dangerous.</h3>
-                    <p class="text-white w-[374px] py-5">Expertly created and curated samples in any style imaginable. Start swimming in sound.</p>
-                    <button class="text-white p-2 rounded border border-[#0033FF] bg-[#0033FF] text-center active:bg-[transparent] active:text-[#0033FF]">Explore Sounds</button>
+                    <p class="text-white w-[374px] py-5">Expertly created and curated samples in any style imaginable.
+                        Start swimming in sound.</p>
+                    <button
+                        class="text-white p-2 rounded border border-[#0033FF] bg-[#0033FF] text-center active:bg-[transparent] active:text-[#0033FF]">Explore
+                        Sounds</button>
                 </div>
                 <div class="img">
                     <img src="./images/IMAGE.png" alt="">
@@ -51,11 +61,62 @@
                 </div>
                 <div class="content">
                     <h3 class="text-white text-3xl">A workflow that actually flows.</h3>
-                    <p class="text-white w-[422px] py-5">Preview samples in your track's key and tempo, drag and drop sounds into your DAW, and organize your favourite samples, MIDI and presents in one place.</p>
-                    <button class="text-white p-2 rounded border border-[#0033FF] bg-[#0033FF] text-center active:bg-[transparent] active:text-[#0033FF]">Workflow</button>
+                    <p class="text-white w-[422px] py-5">Preview samples in your track's key and tempo, drag and drop
+                        sounds into your DAW, and organize your favourite samples, MIDI and presents in one place.</p>
+                    <button
+                        class="text-white p-2 rounded border border-[#0033FF] bg-[#0033FF] text-center active:bg-[transparent] active:text-[#0033FF]">Workflow</button>
+                </div>
+            </div>
+            <div class="borders flex justify-between items-center pt-[150px]">
+                <div
+                    class="border rounded-[10px] p-5 bg-white flex justify-center items-center flex-col w-[361px] h-[453px]">
+                    <div class="img">
+                        <img src="./images/hello.png" alt="">
+                    </div>
+                    <div class="content pt-[40px]">
+                        <p class="w-[285px] py-[10px]">I can always find what I’m looking for on Splice, whether it’s
+                            the exact sound I want or just
+                            a bit of inspiration.</p>
+                        <p class="text-[#767676]">Andrew Huang</p>
+                    </div>
+                </div>
+                <div
+                    class="border rounded-[10px] p-5 bg-white flex justify-center items-center flex-col w-[361px] h-[453px]">
+                    <div class="img">
+                        <img src="./images/img.png" alt="">
+                    </div>
+                    <div class="content pt-[40px]">
+                        <p class="w-[285px] py-[10px]">Finally a way to buy plugins that works. By paying a little at a
+                            time, producers can get legit access to the top VSTs.</p>
+                        <p class="text-[#767676]">KSHMR</p>
+                    </div>
+                </div>
+                <div
+                    class="border rounded-[10px] p-5 bg-white flex justify-center items-center flex-col w-[361px] h-[453px]">
+                    <div class="img">
+                        <img src="./images/IMAGE (2).png" alt="">
+                    </div>
+                    <div class="content pt-[40px]">
+                        <p class="w-[285px] py-[10px]">It’s been fun to dive into Splice’s creator community and explore
+                            tools that support my own creative process.</p>
+                        <p class="text-[#767676]">Kesha Lee</p>
+                    </div>
                 </div>
             </div>
         </section>
     </main>
+    <footer class="bg-[#344346] p-10 text-[#A6A8AD]">
+        <div class="container flex gap-10">
+            <p>&copy; Splice.com All Rights Reserved</p>
+            <nav class="flex gap-10">
+                <a href="#">Terms of Use</a>
+                <a href="#">Privacy Policy</a>
+                <a href="#">Jobs</a>
+                <a href="#">Contact</a>
+                <a href="#">Help</a>
+            </nav>
+        </div>
+    </footer>
 </body>
+
 </html>
